--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,10 @@ psutil = "^5.9.6"
 tabulate = "^0.9.0"
 dill = "^0.3.7"
 jsonpickle = "^3.0.2"
+numpy = "^1.26.3"
+scikit-learn = "^1.4.0"
+nltk = "^3.8.1"
+flask = "^3.0.1"
 
 
 [build-system]
