Add email data and training method

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,8 @@ numpy = "^1.26.3"
 scikit-learn = "^1.4.0"
 nltk = "^3.8.1"
 flask = "^3.0.1"
+pandas = "^2.2.0"
+matplotlib = "^3.8.2"
 
 
 [build-system]
