--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,16 @@ jsonschema = ">=4.19.1,<4.20.0"
 rich = ">=13.6.0,<13.7.0"
 psutil = "^5.9.6"
 tabulate = "^0.9.0"
+dill = "^0.3.7"
+jsonpickle = "^3.0.2"
+numpy = "^1.26.3"
+scikit-learn = "^1.4.0"
+nltk = "^3.8.1"
+flask = "^3.0.1"
+pandas = "^2.2.0"
+matplotlib = "^3.8.2"
+seaborn = "^0.13.2"
+gunicorn = "^21.2.0"
 
 
 [build-system]
